src/plantuml.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { plantumlfile: peg$parseplantumlfile },
        peg$startRuleFunction  = peg$parseplantumlfile,

        peg$c0 = function() { return null },
        peg$c1 = "@startuml",
        peg$c2 = { type: "literal", value: "@startuml", description: "\"@startuml\"" },
        peg$c3 = "@enduml",
        peg$c4 = { type: "literal", value: "@enduml", description: "\"@enduml\"" },
        peg$c5 = function(filelines) { var UMLBlock = require("./UMLBlock"); return new UMLBlock(filelines) },
        peg$c6 = function(items) { for (var i = 0; i < items.length; i++) { if (items[i] === null) { items.splice(i, 1); i--; } } return items },
        peg$c7 = function(lines) { for (var i = 0; i < lines.length; i++) { if (lines[i]===null) { lines.splice(i, 1); i--; } } return lines; },
        peg$c8 = function(declaration) { return declaration },
        peg$c9 = "hide empty members",
        peg$c10 = { type: "literal", value: "hide empty members", description: "\"hide empty members\"" },
        peg$c11 = "skinparam",
        peg$c12 = { type: "literal", value: "skinparam", description: "\"skinparam\"" },
        peg$c13 = /^[^\r\n]/,
        peg$c14 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c15 = /^[:]/,
        peg$c16 = { type: "class", value: "[:]", description: "[:]" },
        peg$c17 = function(leftObject, connector, rightObject) { var Connection = require("./Connection"); return new Connection(leftObject, connector, rightObject) },
        peg$c18 = /^["]/,
        peg$c19 = { type: "class", value: "[\"]", description: "[\"]" },
        peg$c20 = /^[\\]/,
        peg$c21 = { type: "class", value: "[\\\\]", description: "[\\\\]" },
        peg$c22 = /^[^"]/,
        peg$c23 = { type: "class", value: "[^\"]", description: "[^\"]" },
        peg$c24 = "title ",
        peg$c25 = { type: "literal", value: "title ", description: "\"title \"" },
        peg$c26 = "'",
        peg$c27 = { type: "literal", value: "'", description: "\"'\"" },
        peg$c28 = "..",
        peg$c29 = { type: "literal", value: "..", description: "\"..\"" },
        peg$c30 = /^[^\r\n.]/,
        peg$c31 = { type: "class", value: "[^\\r\\n\\.]", description: "[^\\r\\n\\.]" },
        peg$c32 = "--",
        peg$c33 = { type: "literal", value: "--", description: "\"--\"" },
        peg$c34 = /^[^\r\n\-]/,
        peg$c35 = { type: "class", value: "[^\\r\\n\\-]", description: "[^\\r\\n\\-]" },
        peg$c36 = "__",
        peg$c37 = { type: "literal", value: "__", description: "\"__\"" },
        peg$c38 = /^[^\r\n_]/,
        peg$c39 = { type: "class", value: "[^\\r\\n\\_]", description: "[^\\r\\n\\_]" },
        peg$c40 = "note ",
        peg$c41 = { type: "literal", value: "note ", description: "\"note \"" },
        peg$c42 = function(item) { return item },
        peg$c43 = function() { var Composition = require("./Composition"); return new Composition() },
        peg$c44 = function() { var Aggregation = require("./Aggregation"); return new Aggregation() },
        peg$c45 = "<|",
        peg$c46 = { type: "literal", value: "<|", description: "\"<|\"" },
        peg$c47 = function() { var Extension = require("./Extension"); return new Extension(true) },
        peg$c48 = "|>",
        peg$c49 = { type: "literal", value: "|>", description: "\"|>\"" },
        peg$c50 = function() { var Extension = require("./Extension"); return new Extension(false) },
        peg$c51 = "-up-",
        peg$c52 = { type: "literal", value: "-up-", description: "\"-up-\"" },
        peg$c53 = "-down-",
        peg$c54 = { type: "literal", value: "-down-", description: "\"-down-\"" },
        peg$c55 = "-left-",
        peg$c56 = { type: "literal", value: "-left-", description: "\"-left-\"" },
        peg$c57 = "-right-",
        peg$c58 = { type: "literal", value: "-right-", description: "\"-right-\"" },
        peg$c59 = "---",
        peg$c60 = { type: "literal", value: "---", description: "\"---\"" },
        peg$c61 = /^[.]/,
        peg$c62 = { type: "class", value: "[.]", description: "[.]" },
        peg$c63 = /^[\-]/,
        peg$c64 = { type: "class", value: "[-]", description: "[-]" },
        peg$c65 = "*",
        peg$c66 = { type: "literal", value: "*", description: "\"*\"" },
        peg$c67 = /^[*]/,
        peg$c68 = { type: "class", value: "[*]", description: "[*]" },
        peg$c69 = "o",
        peg$c70 = { type: "literal", value: "o", description: "\"o\"" },
        peg$c71 = /^[o]/,
        peg$c72 = { type: "class", value: "[o]", description: "[o]" },
        peg$c73 = /^[{]/,
        peg$c74 = { type: "class", value: "[{]", description: "[{]" },
        peg$c75 = /^[}]/,
        peg$c76 = { type: "class", value: "[}]", description: "[}]" },
        peg$c77 = "setpropname.*",
        peg$c78 = { type: "literal", value: "setpropname.*", description: "\"setpropname.*\"" },
        peg$c79 = "package ",
        peg$c80 = { type: "literal", value: "package ", description: "\"package \"" },
        peg$c81 = "end package",
        peg$c82 = { type: "literal", value: "end package", description: "\"end package\"" },
        peg$c83 = "abstract ",
        peg$c84 = { type: "literal", value: "abstract ", description: "\"abstract \"" },
        peg$c85 = "class ",
        peg$c86 = { type: "literal", value: "class ", description: "\"class \"" },
        peg$c87 = function(classname, lines) { var AbstractClass = require("./AbstractClass"); return new AbstractClass(classname, lines) },
        peg$c88 = function(classname) { var AbstractClass = require("./AbstractClass"); return new AbstractClass(classname) },
        peg$c89 = "end class",
        peg$c90 = { type: "literal", value: "end class", description: "\"end class\"" },
        peg$c91 = /^[ \t]/,
        peg$c92 = { type: "class", value: "[ \\t]", description: "[ \\t]" },
        peg$c93 = /^[\r\n]/,
        peg$c94 = { type: "class", value: "[\\r\\n]", description: "[\\r\\n]" },
        peg$c95 = /^[\n]/,
        peg$c96 = { type: "class", value: "[\\n]", description: "[\\n]" },
        peg$c97 = function(classname, lines) { var Class = require("./Class"); return new Class(classname, lines) },
        peg$c98 = "<<",
        peg$c99 = { type: "literal", value: "<<", description: "\"<<\"" },
        peg$c100 = /^[^>]/,
        peg$c101 = { type: "class", value: "[^>]", description: "[^>]" },
        peg$c102 = ">>",
        peg$c103 = { type: "literal", value: ">>", description: "\">>\"" },
        peg$c104 = function(classname) { var Class = require("./Class"); return new Class(classname) },
        peg$c105 = "interface ",
        peg$c106 = { type: "literal", value: "interface ", description: "\"interface \"" },
        peg$c107 = function(interfacename, lines) { var Interface = require("./Interface"); return new Interface(interfacename, lines) },
        peg$c108 = function(interfacename) { var Interface = require("./Interface"); return new Interface(interfacename) },
        peg$c109 = "end interface",
        peg$c110 = { type: "literal", value: "end interface", description: "\"end interface\"" },
        peg$c111 = function(interfacename, lines) { var  Interface = require("./Interface"); return new Interface(interfacename, lines) },
        peg$c112 = /^[#]/,
        peg$c113 = { type: "class", value: "[#]", description: "[#]" },
        peg$c114 = /^[0-9a-fA-F]/,
        peg$c115 = { type: "class", value: "[0-9a-fA-F]", description: "[0-9a-fA-F]" },
        peg$c116 = "namespace ",
        peg$c117 = { type: "literal", value: "namespace ", description: "\"namespace \"" },
        peg$c118 = function(namespacename, lines) { var Namespace = require("./Namespace"); return new Namespace(namespacename, lines) },
        peg$c119 = "end namespace",
        peg$c120 = { type: "literal", value: "end namespace", description: "\"end namespace\"" },
        peg$c121 = function(namespacename) { var Namespace = require("./Namespace"); return new Namespace(namespacename) },
        peg$c122 = "static ",
        peg$c123 = { type: "literal", value: "static ", description: "\"static \"" },
        peg$c124 = function(accessortype, returntype, membername) { var Field = require("./Field"); return new Field(accessortype, returntype, membername) },
        peg$c125 = function(accessortype, membername, returntype) { var Field = require("./Field"); return new Field(accessortype, returntype, membername) },
        peg$c126 = function(accessortype, membername) { var Field = require("./Field"); return new Field(accessortype, "void", membername) },
        peg$c127 = function(returntype, membername) { var Field = require("./Field"); return new Field("+", returntype, membername) },
        peg$c128 = function(membername, returntype) { var Field = require("./Field"); return new Field("+", returntype, membername) },
        peg$c129 = /^[(]/,
        peg$c130 = { type: "class", value: "[(]", description: "[(]" },
        peg$c131 = /^[)]/,
        peg$c132 = { type: "class", value: "[)]", description: "[)]" },
        peg$c133 = function(field, parameters, returntype) { var Method = require("./Method"); return new Method(field.getAccessType(), returntype, field.getName(), parameters); },
        peg$c134 = function(field, parameters) { var Method = require("./Method"); return new Method(field.getAccessType(), field.getReturnType(), field.getName(), parameters); },
        peg$c135 = function(items) { return items; },
        peg$c136 = /^[ ]/,
        peg$c137 = { type: "class", value: "[ ]", description: "[ ]" },
        peg$c138 = /^[,]/,
        peg$c139 = { type: "class", value: "[,]", description: "[,]" },
        peg$c140 = function(item, membername) { var Parameter = require("./Parameter"); return new Parameter(item, membername ? membername[1] : null); },
        peg$c141 = /^[^ ,\n\r\t(){}]/,
        peg$c142 = { type: "class", value: "[^ ,\\n\\r\\t(){}]", description: "[^ ,\\n\\r\\t(){}]" },
        peg$c143 = function(items) { return items.join("") },
        peg$c144 = /^[A-Za-z_]/,
        peg$c145 = { type: "class", value: "[A-Za-z_]", description: "[A-Za-z_]" },
        peg$c146 = /^[A-Za-z0-9.]/,
        peg$c147 = { type: "class", value: "[A-Za-z0-9.]", description: "[A-Za-z0-9.]" },
        peg$c148 = function(objectname) { return [objectname[0], objectname[1].join("")].join("") },
        peg$c149 = /^[A-Za-z0-9_]/,
        peg$c150 = { type: "class", value: "[A-Za-z0-9_]", description: "[A-Za-z0-9_]" },
        peg$c151 = function(items) { return [items[0], items[1].join("")].join("") },
        peg$c152 = /^[+]/,
        peg$c153 = { type: "class", value: "[+]", description: "[+]" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseplantumlfile() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$parsenoise();
      if (s3 !== peg$FAILED) {
        s4 = peg$parsenewline();
        if (s4 !== peg$FAILED) {
          peg$savedPos = s2;
          s3 = peg$c0();
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parsenoise();
        if (s3 !== peg$FAILED) {
          if (input.substr(peg$currPos, 9) === peg$c1) {
            s4 = peg$c1;
            peg$currPos += 9;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c2); }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parsenoise();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsenewline();
              if (s6 !== peg$FAILED) {
                s7 = peg$parseumllines();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parsenoise();
                  if (s8 !== peg$FAILED) {
                    if (input.substr(peg$currPos, 7) === peg$c3) {
                      s9 = peg$c3;
                      peg$currPos += 7;
                    } else {
                      s9 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$c4); }
                    }
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parsenoise();
                      if (s10 !== peg$FAILED) {
                        peg$savedPos = s2;
                        s3 = peg$c5(s7);
                        s2 = s3;
                      } else {
                        peg$currPos = s2;
                        s2 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s2;
                      s2 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s2;
                    s2 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$FAILED;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$parsenoise();
        if (s3 !== peg$FAILED) {
          s4 = peg$parsenewline();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s2;
            s3 = peg$c0();
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = peg$currPos;
          s3 = peg$parsenoise();
          if (s3 !== peg$FAILED) {
            if (input.substr(peg$currPos, 9) === peg$c1) {
              s4 = peg$c1;
              peg$currPos += 9;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c2); }
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parsenoise();
              if (s5 !== peg$FAILED) {
                s6 = peg$parsenewline();
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseumllines();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parsenoise();
                    if (s8 !== peg$FAILED) {
                      if (input.substr(peg$currPos, 7) === peg$c3) {
                        s9 = peg$c3;
                        peg$currPos += 7;
                      } else {
                        s9 = peg$FAILED;
                        if (peg$silentFails === 0) { peg$fail(peg$c4); }
                      }
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parsenoise();
                        if (s10 !== peg$FAILED) {
                          peg$savedPos = s2;
                          s3 = peg$c5(s7);
                          s2 = s3;
                        } else {
                          peg$currPos = s2;
                          s2 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s2;
                        s2 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s2;
                      s2 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s2;
                    s2 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s2;
                  s2 = peg$FAILED;
                }
              } else {
                peg$currPos = s2;
                s2 = peg$FAILED;
              }
            } else {
              peg$currPos = s2;
              s2 = peg$FAILED;
            }
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseumllines() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseumlline();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parseumlline();
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c7(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseumlline() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parsepropertyset();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsenewline();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsetitleset();
        if (s1 !== peg$FAILED) {
          s2 = peg$parsenewline();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0();
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsenoise();
          if (s1 !== peg$FAILED) {
            s2 = peg$parsenewline();
            if (s2 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0();
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsecommentline();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c0();
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parsenoteline();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c0();
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parsehideline();
                if (s1 !== peg$FAILED) {
                  s2 = peg$parsenewline();
                  if (s2 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c0();
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parseskinparams();
                  if (s1 !== peg$FAILED) {
                    s2 = peg$parsenewline();
                    if (s2 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c0();
                      s0 = s1;
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = peg$parsepackagedeclaration();
                    if (s1 !== peg$FAILED) {
                      s2 = peg$parsenewline();
                      if (s2 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c8(s1);
                        s0 = s1;
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                    if (s0 === peg$FAILED) {
                      s0 = peg$currPos;
                      s1 = peg$parsenamespacedeclaration();
                      if (s1 !== peg$FAILED) {
                        s2 = peg$parsenewline();
                        if (s2 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c8(s1);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                      if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        s1 = peg$parseclassdeclaration();
                        if (s1 !== peg$FAILED) {
                          s2 = peg$parsenewline();
                          if (s2 !== peg$FAILED) {
                            peg$savedPos = s0;
                            s1 = peg$c8(s1);
                            s0 = s1;
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                        if (s0 === peg$FAILED) {
                          s0 = peg$currPos;
                          s1 = peg$parseinterfacedeclaration();
                          if (s1 !== peg$FAILED) {
                            s2 = peg$parsenewline();
                            if (s2 !== peg$FAILED) {
                              peg$savedPos = s0;
                              s1 = peg$c8(s1);
                              s0 = s1;
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                          } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                          }
                          if (s0 === peg$FAILED) {
                            s0 = peg$currPos;
                            s1 = peg$parseabstractclassdeclaration();
                            if (s1 !== peg$FAILED) {
                              s2 = peg$parsenewline();
                              if (s2 !== peg$FAILED) {
                                peg$savedPos = s0;
                                s1 = peg$c8(s1);
                                s0 = s1;
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                            } else {
                              peg$currPos = s0;
                              s0 = peg$FAILED;
                            }
                            if (s0 === peg$FAILED) {
                              s0 = peg$currPos;
                              s1 = peg$parsememberdeclaration();
                              if (s1 !== peg$FAILED) {
                                s2 = peg$parsenewline();
                                if (s2 !== peg$FAILED) {
                                  peg$savedPos = s0;
                                  s1 = peg$c8(s1);
                                  s0 = s1;
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                              }
                              if (s0 === peg$FAILED) {
                                s0 = peg$currPos;
                                s1 = peg$parseconnectordeclaration();
                                if (s1 !== peg$FAILED) {
                                  s2 = peg$parsenewline();
                                  if (s2 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c8(s1);
                                    s0 = s1;
                                  } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                  }
                                } else {
                                  peg$currPos = s0;
                                  s0 = peg$FAILED;
                                }
                              }
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parsehideline() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parsenoise();
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 18) === peg$c9) {
          s2 = peg$c9;
          peg$currPos += 18;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parsenoise();
          if (s3 !== peg$FAILED) {
            s1 = [s1, s2, s3];
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseskinparams() {
      var s0, s1, s2, s3, s4, s5;
